# air-tracker-domains

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  domains.yaml  pyproject.toml  scene_generator.py
.github/workflows/: validate_domains.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: cronjob.yaml
tests/: requirements.txt  test_domains.py
